create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2205,6 +2205,12 @@ body {
     margin: 0 0.5rem;
   }
 }
+.cid-r66m35HIfg H2 {
+  color: #733fc0;
+}
+.cid-r66m35HIfg .mbr-section-subtitle DIV {
+  color: #733fc0;
+}
 .cid-r66xCrqCIC {
   padding-top: 60px;
   padding-bottom: 60px;
